200 OK https://parliament.gov.vu/index.php/memebers/members-of-11th-legislatture

--- a/parliament.gov.vu/d08f8b8af2fab1c76bb8076a97212d902178f076.html
+++ b/parliament.gov.vu/d08f8b8af2fab1c76bb8076a97212d902178f076.html
@@ -154,7 +154,7 @@
 </tr>
 <tr>
 <td><a href="/index.php/members/111-hon-ralph-regenvanu">Hon. Ralph Regenvanu</a></td>
-<td>Minister of Lands, Geology and Natural Resources </td>
+<td>Foreign Affairs and External Trade </td>
 <td> GJP</td>
 <td>Port Vila</td>
 </tr>
@@ -185,14 +185,14 @@
 <tr>
 <td>Hon. Jean Pierre Nirua</td>
 <td>Minister of Education </td>
-<td> IND</td>
+<td> RMC</td>
 <td>Port Vila</td>
 </tr>
 <tr>
-<td><a href="/index.php/members/78-hon-leignkone-tao-bruno">Hon. Lenkon Tao Bruno</a></td>
-<td>Minister of Foreign Affairs and <br />External Trades </td>
-<td> NUP</td>
-<td>Ambrym</td>
+<td><a href="/index.php/members/194-honandrewnapuat"><span style="color: #0066cc;">Hon. Andrew Solomon Napuat</span></a></td>
+<td>Minister of Internal Affairs </td>
+<td> GJP</td>
+<td>Tanna</td>
 </tr>
 <tr>
 <td>Hon. Ronald Warsal Kalmasei</td>
@@ -201,14 +201,14 @@
 <td>Santo</td>
 </tr>
 <tr>
-<td><a href="/index.php/members/90-hon-jerome-ludvaune">Hon. Jerome Ludvaune</a></td>
+<td>Hon. Jack Norris Kalmet</td>
 <td>Minister of Health </td>
 <td> UMP</td>
-<td>Malekula</td>
+<td>Efate Rural</td>
 </tr>
 <tr>
 <td><a href="/index.php/members/101-hon-alfred-maoh">Hon. Alfred Maoh</a></td>
-<td>Minister of Internal Affairs </td>
+<td>Minister of Lands, Geology and Natural Resources</td>
 <td> GJP</td>
 <td>Santo Rural</td>
 </tr>
@@ -228,7 +228,7 @@
 <tbody>
 <tr>
 <td><a href="/index.php/members/187-honclaudechristopheantonieemelee"> Hon. Claude Christophe Antonie Emelee</a></td>
-<td>Opposition Whip,  Member of Committee on Foreign Affairs and External Trade &amp; Member of Committee on Members Ethics and Integrity</td>
+<td> Member of Committee on Foreign Affairs and External Trade &amp; Member of Committee on Members Ethics and Integrity</td>
 <td> VNDP</td>
 <td>Torres</td>
 </tr>
@@ -240,7 +240,7 @@
 </tr>
 <tr>
 <td>Hon. Hosea Ovock Rothul Nevu</td>
-<td> Member of Privileges Committee </td>
+<td>Parliamentary Secretary - Internal Affairs.In-charge of Provincial Affairs and Police </td>
 <td> PPP</td>
 <td>Santo Rural</td>
 </tr>
@@ -300,13 +300,13 @@
 </tr>
 <tr>
 <td><a href="/index.php/members/180-honsalajohn"> Hon. Sala John</a></td>
-<td>Parliament Secretary - Ministry of Finance, Chairman of Committee on Economic Policy</td>
+<td> Member</td>
 <td> GJP</td>
 <td>Malekula</td>
 </tr>
 <tr>
 <td>Hon. Gracia Shadrack</td>
-<td>Parliament Secretary to Ministry of Health</td>
+<td>Member</td>
 <td> VLP</td>
 <td>Malekula</td>
 </tr>
@@ -360,15 +360,15 @@
 </tr>
 <tr>
 <td>Hon. Isaac Daniel Tongolilu</td>
-<td>Member of Standing Order Review Committee &amp; Member of Social Policy Committee</td>
+<td>Opposition Whipp, Member of Standing Order Review Committee &amp; Member of Social Policy Committee</td>
 <td> IND</td>
 <td>Epi</td>
 </tr>
 <tr>
-<td>Hon. Norris Kalmet</td>
-<td>Member</td>
-<td> UMP</td>
-<td>Efate Rural</td>
+<td><a href="/index.php/members/90-hon-jerome-ludvaune"><span style="color: #0066cc;">Hon. Jerome Ludvaune</span></a></td>
+<td>Parliament Secretary - Ministry of Health</td>
+<td> RMC</td>
+<td>Malekula</td>
 </tr>
 <tr>
 <td><a href="/index.php/members/186-honkalopakoasongilano">Hon. Kalo Pakoa Songi Lano</a></td>
@@ -426,7 +426,7 @@
 </tr>
 <tr>
 <td><a href="/index.php/members/184-hontomnoamiouniwan">Hon. Tom Noam Iouniwan</a></td>
-<td>Member of Committee on Institutions</td>
+<td>Parliament Secretary - Ministry of Agriculture, Member of Committee on Institutions</td>
 <td> UMP</td>
 <td>Tanna</td>
 </tr>
@@ -443,10 +443,10 @@
 <td>Tanna</td>
 </tr>
 <tr>
-<td><a href="/index.php/members/194-honandrewnapuat">Hon. Andrew Solomon Napuat</a></td>
-<td>Parliamentary Secretary - Internal Affairs.In-charge of Provincial Affairs and Police &amp; Member of Committee on Members Ethics and Integrity</td>
-<td>GJP</td>
-<td>Tanna</td>
+<td> <a href="/index.php/members/78-hon-leignkone-tao-bruno"><span style="color: #0066cc;">Hon. Lenkon Tao Bruno</span></a></td>
+<td>Parliament Secretary - Ministry of Finance and Economic Management</td>
+<td>NUP</td>
+<td>Ambrym</td>
 </tr>
 <tr>
 <td>Hon. Tomker Netvunei Naling</td>
@@ -501,7 +501,7 @@
 				<section class="tm-bottom-c uk-grid" data-uk-grid-match="{target:'> div > .uk-panel'}" data-uk-grid-margin>
 <div class="uk-width-1-1 uk-width-medium-1-3"><div class="uk-panel"><h3 class="uk-panel-title">About the Parliament</h3><ul class="uk-nav uk-nav-parent-icon uk-nav-side" data-uk-nav="{}"><li><a href="/index.php/about-us">About us</a></li><li><a href="/index.php/history">History</a></li><li><a href="/index.php/clerk-of-parliament">Clerk of parliament</a></li><li><a href="/index.php/office-of-the-speaker">Office of the speaker</a></li><li><a href="/index.php/how-parliament-works">How Parliament works</a></li></ul></div></div>
 
-<div class="uk-width-1-1 uk-width-medium-1-3"><div class="uk-panel"><div id="map-56-5a5bcdb26c363" class="wk-map wk-map-default" style="height: 250px; width:100%;" data-widgetkit="googlemaps" data-options='{"title":"Port Vila","location":"Hamburg, Germany","lat":"-17.745542034487947","lng":"168.31548347992555","icon":"red-dot","popup":1,"text":"<div class=\"wk-content\"><span style=\"color: #4c1fbc;\">Parliament of the Republic of Vanuatu<\/span><\/div>","mainIcon":"red-dot","width":"auto","height":250,"style":"default","mapTypeId":"hybrid","zoom":16,"mapCtrl":2,"typeCtrl":0,"directions":0,"unitSystem":0,"clusterMarker":0,"styler_invert_lightness":0,"zoomWhl":0,"draggable":1,"styler_hue":"","styler_saturation":-100,"styler_lightness":50,"styler_gamma":1,"adresses":[]}'></div></div></div>
+<div class="uk-width-1-1 uk-width-medium-1-3"><div class="uk-panel"><div id="map-56-5a62480e23507" class="wk-map wk-map-default" style="height: 250px; width:100%;" data-widgetkit="googlemaps" data-options='{"title":"Port Vila","location":"Hamburg, Germany","lat":"-17.745542034487947","lng":"168.31548347992555","icon":"red-dot","popup":1,"text":"<div class=\"wk-content\"><span style=\"color: #4c1fbc;\">Parliament of the Republic of Vanuatu<\/span><\/div>","mainIcon":"red-dot","width":"auto","height":250,"style":"default","mapTypeId":"hybrid","zoom":16,"mapCtrl":2,"typeCtrl":0,"directions":0,"unitSystem":0,"clusterMarker":0,"styler_invert_lightness":0,"zoomWhl":0,"draggable":1,"styler_hue":"","styler_saturation":-100,"styler_lightness":50,"styler_gamma":1,"adresses":[]}'></div></div></div>
 
 <div class="uk-width-1-1 uk-width-medium-1-3"><div class="uk-panel"><h3 class="uk-panel-title">External Links</h3><ul class="uk-nav uk-nav-parent-icon uk-nav-side" data-uk-nav="{}"><li><a href="https://webmail.vanuatu.gov.vu/owa" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">Government email</a></li><li><a href="http://www.cpahq.org/cpahq/" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">Commonwealth Parliamentary Association</a></li><li><a href="http://www.paclii.org/databases.html#VU" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">PacLII</a></li><li><a href="http://www.spc.int/" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">International Secretariate of the Pacific Island Community</a></li><li><a href="http://www.ogcio.gov.vu" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">Office of the Government Chief Information Officer</a></li><li><a href="http://www.msgsec.info/" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,');return false;">Melanesian Spearhead Group Secretariat</a></li></ul></div></div>
 </section>
